feat: setup chakra and design pattern

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/pro-theme": "^0.0.55",
+    "@chakra-ui/react": "^2.3.4",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "framer-motion": "^7.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
