--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -16,19 +16,14 @@ jobs:
         with:
           node-version: 16.x
 
-      - name: Go to backend folder
-        run: cd backend
+      - name: Setup project
+        run: |
+          cd backend
+          yarn install
+          yarn lint
+          yarn build
 
-      - name: Install dependencies
-        run: yarn install
-
-      - name: Check lint issues
-        run: yarn lint "./**/*.ts" --fix
-
-      - name: Generate dist folder
-        run: yarn build
-
-      - name: Copy dist to virtual machine
+      - name: Copy project to virtual machine
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
