--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -16,21 +16,21 @@ jobs:
         with:
           node-version: 16.x
 
-      - name: Setup project
+      - name: Setup backend
         run: |
           cd backend
           yarn install
           yarn lint
           yarn build
 
-      - name: Copy project to virtual machine
+      - name: Copy backend to virtual machine
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }}
-          source: ".,!node_modules"
+          source: "./backend,!./backend/node_modules"
           target: "pokedex"
 
       - name: Run production scripts
