ci: use nvm before installing deps

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Setup backend
         run: |
           cd backend
+          nvm use --lts
           yarn install
           yarn lint
           yarn build
