--- a/backend/ormconfig.json.example
+++ b/backend/ormconfig.json.example
@@ -4,9 +4,9 @@
     "type": "postgres",
     "host": "localhost",
     "port": 5432,
-    "username": "pokedex",
+    "username": "postgres",
     "password": "123456",
-    "database": "santiago",
+    "database": "pokedex",
     "entities": [
       "./src/Modules/**/Entities/*.ts"
     ],
