--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -46,4 +46,4 @@ jobs:
             source ~/.nvm/nvm.sh
             nvm use --lts
             yarn install
-            yarn pm2 restart ecosystem.config.js
+            yarn prod
